--- a/로그인.html
+++ b/로그인.html
@@ -140,13 +140,13 @@
             TNER
         </div>
 
-        <!-- <div class="input-box">
+        <div class="input-box">
             <div class="text">휴대폰 번호 또는 이메일 주소</div>
         </div>
 
         <div class="input-box">
             <div class="text">비밀번호</div>
-        </div> -->
+        </div>
 
         <div class="link">비밀번호를 잊으셨나요?</div>
 
