--- a/로그인.html
+++ b/로그인.html
@@ -36,7 +36,7 @@
             font-size: 16px;
             font-family: 'Rubik', sans-serif;
             font-weight: 300;
-            color: #C9C9C9;
+            color: #202020;
             padding: 0 20px;
         }
         .button {
@@ -73,18 +73,17 @@
         .logo {
             display: flex;
             align-items: center;
-            justify-content: center;
+            justify-content: center; /* Center horizontally */;
             font-size: 100px;
             font-family: 'Inter', sans-serif;
             font-weight: 900;
-            letter-spacing: 10px;
+            letter-spacing: 8px;
             margin: 50px 0;
-            margin-right: 20px; 
         }
         .logo img {
-            height: 85px; /* 원하는 높이로 설정 */
+            height: 80px; /* 원하는 높이로 설정 */
             width: auto; /* 비율에 맞게 너비 자동 조정 */
-            margin: 15px 15px 0; /* 이미지와 문자 간 간격 조절 */
+            margin: 20px 15px 10px 0; /* 이미지와 문자 간 간격 조절 */
         }
 
         
@@ -102,8 +101,9 @@
             justify-content: flex-end;
             margin: 20px 0;
         }
+
         .extra-content img {
-            margin-left: 10px;
+            margin-left: 15px;
         }
         @media (max-width: 480px) {
             .container {
