--- a/로그인.html
+++ b/로그인.html
@@ -64,12 +64,7 @@
             font-weight: 300;
             text-decoration: underline;
         }
-        .signup {
-            font-size: 20px;
-            font-family: 'Noto Sans', sans-serif;
-            font-weight: 300;
-            text-decoration: underline;
-        }
+
         .logo {
             display: flex;
             align-items: center;
@@ -125,6 +120,7 @@
             }
             .signup {
                 font-size: 16px;
+                text-decoration: none;
             }
             .extra-content img {
                 width: 40px;
@@ -153,7 +149,7 @@
 
         <div class="button">로그인</div>
 
-        <div class="signup">회원가입</div>
+        <a href="회원가입.html"  style="color: white; text-decoration: none; display: block; text-align : center">회원가입</a>
     
     </div>
 </body>
