--- a/운동루틴생성1.html
+++ b/운동루틴생성1.html
@@ -34,8 +34,11 @@
 
     <div class="info">
         <div class="label-info">상세 설명</div>
-        <input type="text">
+        <textarea></textarea>
     </div>
+
+    <button class="new-gigoo-btn"> 운동기구 추가하기 </div>
+    <button class="new-gigoo-btn"> 관련링크 추가하기 </div>
 
 </body>
 </html>
@@ -149,11 +152,14 @@
 
         .label-info {
             font-size: 20px;
-            font-weight: 500;
+            font-weight: 300;
             color: #C9C9C9;
             font-family: Rubik;
             word-wrap: break-word;
-            /* margin-right : 10px; */
+            position: absolute;
+            top: -30px; /* Adjust as needed to position it properly */
+            left: 20px; 
+            transform: translateX(-10%);
         }
         .info {
             width: 90%;
@@ -170,7 +176,7 @@
     
         }
         
-        .info input {
+        .info textarea {
             width: calc(100% - 40px);
             height: 100%;
             border: none;
@@ -180,8 +186,25 @@
             font-weight: 300;
             color: #fff;
             padding: 0 20px;
+
         } 
 
+        .new-gigoo-btn {
+            width: 90%;
+            height: 80px;
+            background:#1C1C1C ;
+            border-radius: 5px;
+            border: 2px solid #ff0000 ;
+            margin: 20px auto;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 20px;
+            font-family: 'Roboto', sans-serif;
+            font-weight: 700;
+            cursor: pointer;
+            color: #fff;
+        }
 
         @media (max-width: 600px) {
             .nav-bar {
