--- a/운동루틴1.html
+++ b/운동루틴1.html
@@ -90,7 +90,8 @@
         <a href="#" class="nav-item">매칭하기</a>
     </div>
 
-    <button class="new-routine-btn"> + 새 루틴 만들기</div>
+    <button class="new-routine-btn" onclick="window.location.href='운동루틴생성1.html'"> + 새 루틴 만들기</button>
+
 
         <button class="routine-btn">
             <img src="C:\Users\USER\OneDrive\바탕 화면\project\사진\루틴사진1.png">
@@ -101,6 +102,7 @@
             <img src="C:\Users\USER\OneDrive\바탕 화면\project\사진\루틴사진1.png">
             유산소 일주일 루틴
         </button>
+        
         <button class="routine-btn">
             <img src="C:\Users\USER\OneDrive\바탕 화면\project\사진\루틴사진1.png">
             유산소 일주일 루틴
