--- a/HTML-EJS/일정관리 월별관리.html
+++ b/HTML-EJS/일정관리 월별관리.html
@@ -155,9 +155,21 @@
             background-color: rgba(255, 0, 0, 0.8);
         }
 
-        .exercise-log,
+        .exercise-log{
+             background-color: #fff;
+            font-family: 'Apple SD Gothic Neo', sans-serif;
+            text-align: center;
+            border-radius: 15px;
+            padding: 20px;
+            width: 90%;
+            max-width: 400px;
+            color: #000;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            margin-bottom: 20px;
+        }
         .exercise-record {
             background-color: #fff;
+            font-family: 'Apple SD Gothic Neo', sans-serif;
             border-radius: 15px;
             padding: 20px;
             width: 90%;
@@ -184,7 +196,7 @@
         }
 
         .exercise-log button {
-            background-color: #ff0000;
+            background-color: #000000;
             color: #fff;
             border: none;
             cursor: pointer;
@@ -192,7 +204,7 @@
         }
 
         .exercise-log button:hover {
-            background-color: rgba(255, 0, 0, 0.8);
+            background-color: rgba(0, 0, 0, 0.8);
         }
 
         .exercise-record p {
@@ -249,16 +261,15 @@
             </table>
         </div>
         <div class="exercise-record" id="exercise-record">
-            <h4 id="record-date"></h4>
+            <h2 id="record-date"></h4>
             <p id="record-description">오늘의 운동 :</p>
             <p id="record-time">운동한 시간 : 00분</p>
         </div>
         <div class="exercise-log">
             <h3>운동 기록</h3>
-            <input type="text" id="exercise-date" readonly placeholder="날짜를 선택하세요">
-            <textarea id="exercise-description" rows="4" placeholder="오늘의 운동을 입력하세요..."></textarea>
-            <input type="number" id="exercise-time" placeholder="운동한 시간을 입력하세요 (분)">
-            <button id="save-log">저장</button>
+            <p>이전에 했던 운동을 기록하세요!</p>
+            <div"text" id="exercise-date" readonly placeholder="날짜를 선택하세요">
+            <button id="save-log">추가하기</button>
         </div>
     </div>
     <script>
@@ -357,15 +368,6 @@
             const description = exerciseDescription.value;
             const time = exerciseTime.value;
 
-            if (date && description && time) {
-                const logKey = `${date.slice(0, 4)}-${date.slice(6, 8)}-${date.slice(10, 12)}`;
-                exerciseLogs[logKey] = { description, time };
-                alert(`운동 기록이 저장되었습니다:\n날짜: ${date}\n운동: ${description}\n시간: ${time}분`);
-                exerciseDescription.value = "";
-                exerciseTime.value = "";
-            } else {
-                alert("모든 필드를 입력하세요.");
-            }
         });
 
         renderCalendar(currentMonth, currentYear);
