--- a/HTML-EJS/일정관리 월별관리.html
+++ b/HTML-EJS/일정관리 월별관리.html
@@ -269,7 +269,7 @@
             <h3>운동 기록</h3>
             <p>이전에 했던 운동을 기록하세요!</p>
             <div"text" id="exercise-date" readonly placeholder="날짜를 선택하세요">
-            <button id="save-log">추가하기</button>
+            <button onclick="location.href = '일정관리_운동기록수정.html'", id="save-log">추가하기</button>
         </div>
     </div>
     <script>
